# libkvkontakte

./: .gitignore  BUGS  BUGS-facebook  CMakeLists.txt  KF5VkontakteConfig.cmake.in  LibKVkontakteConfig.cmake.in  LibKVkontakteConfigVersion.cmake.in  Mainpage.dox  NEWS  README  RELEASE-HOWTO  TODO  config.h.cmake
autotests/: CMakeLists.txt  api-token.txt  autotestsconfig.h.in  test_albums.cpp  test_albums.h  test_database.cpp  test_database.h  test_frequentrequests.cpp  test_frequentrequests.h  test_friends.cpp  test_friends.h  test_loginproperties.cpp  test_loginproperties.h  test_messages.cpp  test_messages.h  test_notes.cpp  test_notes.h  test_photos.cpp  test_photos.h  test_userinfo.cpp  test_userinfo.h  vkapi.cpp  vkapi.h  vktestbase.cpp  vktestbase.h
cmake/modules/: FindLibKVkontakte.cmake
libkfacebook/: CMakeLists.txt  Messages.sh  alleventslistjob.cpp  alleventslistjob.h  allnoteslistjob.cpp  allnoteslistjob.h  authenticationdialog.cpp  authenticationdialog.h  eventinfo.cpp  eventinfo.h  eventjob.cpp  eventjob.h  eventslistjob.cpp  eventslistjob.h  facebook.cpp  facebook.h  facebookaddjob.cpp  facebookaddjob.h  facebookdeletejob.cpp  facebookdeletejob.h  facebookjob.cpp  facebookjob.h  facebookjobs.cpp  facebookjobs.h  friendjob.cpp  friendjob.h  friendlistjob.cpp  friendlistjob.h  libkfacebook_export.h  listjobbase.cpp  listjobbase.h  noteaddjob.cpp  noteaddjob.h  noteinfo.cpp  noteinfo.h  notejob.cpp  notejob.h  noteslistjob.cpp  noteslistjob.h  pagedlistjob.cpp  (+9 more)
libkvkontakte/: CMakeLists.txt  Messages.sh  albuminfo.cpp  albuminfo.h  albumlistjob.cpp  albumlistjob.h  allmessageslistjob.cpp  allmessageslistjob.h  allnoteslistjob.cpp  allnoteslistjob.h  authenticationdialog.cpp  authenticationdialog.h  cidsnamesjob.cpp  cidsnamesjob.h  createalbumjob.cpp  createalbumjob.h  currentuserjob.cpp  currentuserjob.h  deletealbumjob.cpp  deletealbumjob.h  discussioninfo.cpp  discussioninfo.h  discussionslistjob.cpp  discussionslistjob.h  editalbumjob.cpp  editalbumjob.h  friendjob.cpp  friendjob.h  friendlistjob.cpp  friendlistjob.h  getapplicationpermissionsjob.cpp  getapplicationpermissionsjob.h  getinfojob.cpp  getinfojob.h  getphotouploadserverjob.cpp  getphotouploadserverjob.h  getprofilephotouploadserverjob.cpp  getprofilephotouploadserverjob.h  getuploadserverjobbase.cpp  getuploadserverjobbase.h  (+58 more)
resource/: CMakeLists.txt  Messages.sh  authenticationwidget.cpp  authenticationwidget.h  facebookresource.cpp  facebookresource.desktop  facebookresource.h  facebookresource_events.cpp  facebookresource_friends.cpp  facebookresource_notes.cpp  settings.cpp  settings.h  settingsbase.kcfg  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  timestampattribute.cpp  timestampattribute.h  vkontakteresource.cpp  vkontakteresource.desktop  vkontakteresource.h  vkontakteresource_events.cpp  vkontakteresource_friends.cpp  vkontakteresource_messages.cpp  vkontakteresource_notes.cpp
src/: CMakeLists.txt  Messages.sh  albuminfo.cpp  albuminfo.h  albumlistjob.cpp  albumlistjob.h  allmessageslistjob.h  allnoteslistjob.h  apppermissions.h  authenticationdialog.cpp  authenticationdialog.h  cidsnamesjob.cpp  cidsnamesjob.h  createalbumjob.h  deletealbumjob.cpp  deletealbumjob.h  discussionslistjob.h  editalbumjob.cpp  editalbumjob.h  friendlistjob.cpp  friendlistjob.h  getapplicationpermissionsjob.cpp  getapplicationpermissionsjob.h  getinfojob.h  getphotouploadserverjob.cpp  getphotouploadserverjob.h  getvariablejob.cpp  getvariablejob.h  groupinfo.h  grouplistjob.h  messageinfo.cpp  messageinfo.h  messageslistjob.h  noteaddjob.cpp  noteaddjob.h  noteinfo.cpp  noteinfo.h  notejob.h  noteslistjob.cpp  noteslistjob.h  (+21 more)
